--- a/src/components/Puzzle/Puzzle.scss
+++ b/src/components/Puzzle/Puzzle.scss
@@ -1,19 +1,16 @@
 .puzzle {
   .puzzle__grid {
-    grid-area: puzzle-graph;
     display: grid;
     gap: 0.5rem;
     background-color: darken(#2c2a30, 5);
     border: 0.5rem solid darken(#2c2a30, 5);
-    margin: 5rem 0;
+    margin: 2rem 0;
 
-    .puzzle__node {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 0.5rem;
+    aspect-ratio: 1;
+    max-width: 500px;
 
-      background-color: #2c2a30;
+    & > * {
+      font-size: 1rem;
     }
   }
 }
