added lose condition

--- a/src/components/Puzzle/Puzzle.scss
+++ b/src/components/Puzzle/Puzzle.scss
@@ -4,7 +4,7 @@
     gap: 0.5rem;
     background-color: darken(#2c2a30, 5);
     border: 0.5rem solid darken(#2c2a30, 5);
-    margin: 2rem 0;
+    margin-bottom: 2rem;
 
     aspect-ratio: 1;
     max-width: 500px;
