--- a/src/components/PuzzleNode/PuzzleNode.scss
+++ b/src/components/PuzzleNode/PuzzleNode.scss
@@ -5,6 +5,12 @@
   padding: 0.5rem;
 
   background-color: #2c2a30;
-  color: #2c2a30;
   aspect-ratio: 1;
+
+  &--incorrect {
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' preserveAspectRatio='none' viewBox='0 0 100 100'><path d='M100 0 L0 100 ' stroke='rgb(202, 54, 54)' stroke-width='3.5'/><path d='M0 0 L100 100 ' stroke='rgb(202, 54, 54)' stroke-width='3.5'/></svg>");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 75% 75%, auto;
+  }
 }
