--- a/src/components/PuzzleNode/PuzzleNode.scss
+++ b/src/components/PuzzleNode/PuzzleNode.scss
@@ -13,4 +13,11 @@
     background-position: center center;
     background-size: 75% 75%, auto;
   }
+
+  &--marked {
+    background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' version='1.1' preserveAspectRatio='none' viewBox='0 0 100 100'><path d='M100 0 L0 100 ' stroke='whitesmoke' stroke-width='3.5'/><path d='M0 0 L100 100 ' stroke='whitesmoke' stroke-width='3.5'/></svg>");
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 75% 75%, auto;
+  }
 }
