puzzle tiles reflect user completion

--- a/src/components/TileLink/TileLink.scss
+++ b/src/components/TileLink/TileLink.scss
@@ -1,9 +1,17 @@
 @use "../../styles/variables.scss" as *;
+@use "../../styles/mixins.scss" as *;
 
 .tile-link {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   aspect-ratio: 1;
   background-color: $foreground-color;
+
+  &--highlighted {
+    background-color: $success-green;
+
+    @include tick-overlay;
+  }
 }
