--- a/src/components/TileLink/TileLink.scss
+++ b/src/components/TileLink/TileLink.scss
@@ -8,10 +8,10 @@
   align-items: center;
   aspect-ratio: 1;
   background-color: $foreground-color;
+  text-decoration: none;
+  font-size: 4rem;
 
   &--highlighted {
     background-color: $success-green;
-
-    @include tick-overlay;
   }
 }
