--- a/src/components/TileLinkContainer/TileLinkContainer.scss
+++ b/src/components/TileLinkContainer/TileLinkContainer.scss
@@ -1,4 +1,4 @@
-.tile-container {
+.tile-link-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(6rem, 1fr));
   justify-content: center;
