--- a/src/components/PuzzleHeader/PuzzleHeader.scss
+++ b/src/components/PuzzleHeader/PuzzleHeader.scss
@@ -36,6 +36,6 @@
   .puzzle-header__home {
     background-color: $foreground-color;
     padding: 1rem 0;
-    border-radius: 0.65rem;
+    border-radius: $standard-border-radius;
   }
 }
