--- a/src/components/Puzzle/Puzzle.scss
+++ b/src/components/Puzzle/Puzzle.scss
@@ -12,7 +12,7 @@
 
   .puzzle__grid {
     display: grid;
-    gap: 0.5rem;
+    gap: 1px;
     background-color: $foreground-color;
     border: 0.5rem solid $foreground-color;
     border-radius: $standard-border-radius;
